improved player switch support

--- a/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
@@ -95,7 +95,7 @@ Statistics are enabled by default, configuration consists of enabling the 'stati
 <i>Analytics events:</i> ( only html5 )<br />
 <textarea id="analyticsLog" rows='15' ></textarea>
 </div>
-
+<div style="width:400px;float:left">
 <object id="kaltura_player" name="kaltura_player" 
 type="application/x-shockwave-flash" 
 allowFullScreen="true" allowNetworking="all" 
@@ -109,7 +109,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1274763304/wid/_243342/u
 	<param name="flashVars" value="&playbackContext=123&originFeature=0&applicationName=customAN&userId=customUid" />
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1274763304/wid/_243342/uiconf_id/48501/entry_id/0_swup5zao" />
 </object>
-
+</div>
 </div>
 <!-- 
 <layout id="default light player" skinPath="/content/uiconf/kaltura/kmc/appstudio/kdp3/skin_light.swf?a=20">
