--- a/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Fall forward html5</title>
+<title>Kaltura Analytics</title>
 
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
@@ -75,12 +75,12 @@ if( window.QUnit ){
 </script>
 </head>
 <body>
-<h2> Kaltura analytics </h2>
+<h2> Kaltura Analytics </h2>
 
 Kaltura analytics enables <a href="http://knowledge.kaltura.com/creating-and-tracking-analytics-kmc-0">tracking kaltura players</a>
 <br>
 <br>
-Statistics are enabled by default, configuration consists of enabling the 'statistics' plugin: 
+Statistics are enabled by default. Configuration consists of enabling the 'statistics' plugin: 
 
 <div id="analyticsSettings" style="width:100%"></div>
 <script>
