removed alert in bind unbind ( breaks automated testing )

--- a/modules/KalturaSupport/tests/BindUnbind.qunit.html
+++ b/modules/KalturaSupport/tests/BindUnbind.qunit.html
@@ -167,7 +167,7 @@
 					
 					var currentPlayCount = window[ 'playCount' ];
 					kdp.sendNotification( "doPlay" );
-					alert( 'currentPlayCount:' + currentPlayCount );
+					//alert( 'currentPlayCount:' + currentPlayCount );
 					equal( ++currentPlayCount, window[ 'playCount'], "Anonymous function binded to doPlay.chaining (Checking playCount value)" );
 					kdp.kUnbind( ".chaining" ).kBind( "doPause.chaining", function() {
 						window[ 'pauseCount' ]++;
