--- a/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
@@ -4,8 +4,8 @@
 <title>Kaltura Analytics</title>
 
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
-<script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
+<script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
 <script type="text/javascript">	
 function jsKalturaPlayerTest( videoId ){
 	// Name this module
@@ -61,7 +61,11 @@ function jsKalturaPlayerTest( videoId ){
 
 <script type="text/javascript">
 window['kalturaSendAnalyticEvent'] = function( analyticName, analyticValue ){
-	$('#analyticsLog').append( analyticName + "\n");
+	$('#analyticsLog').append( analyticName + 
+			"\n\tcontextId: " + analyticValue['contextId'] + 
+			"\n\tfeatureType: " +analyticValue['featureType'] + 
+			"\n\tapplicationId: " + analyticValue['applicationId'] + 
+	"\n");
 	setTimeout(function(){
 		if( window['sendKalturaSendAnalyticEvent'] ){
 			sendKalturaSendAnalyticEvent( analyticName, analyticValue );
@@ -83,20 +87,6 @@ Kaltura analytics enables <a href="http://knowledge.kaltura.com/creating-and-tra
 Statistics are enabled by default. Configuration consists of enabling the 'statistics' plugin: 
 
 <div id="analyticsSettings" style="width:100%"></div>
-<script>
-	var kWidgetFlashvars = {
-		'statistics':{
-			'plugin': true
-		}
-	}
-	$( '#analyticsSettings' ).prettyKalturaConfig(
-			'statistics', 
-			kWidgetFlashvars.statistics, 
-			function(fv){
-				debugger;
-			}
-	);
-</script>
 <br />
 
 <div id="playbackModeSelector"></div>
@@ -107,19 +97,42 @@ Statistics are enabled by default. Configuration consists of enabling the 'stati
 <textarea id="analyticsLog" rows='15' ></textarea>
 </div>
 <div style="width:400px;float:left">
-<object id="kaltura_player" name="kaltura_player" 
-type="application/x-shockwave-flash" 
-allowFullScreen="true" allowNetworking="all" 
-allowScriptAccess="always" height="330" width="400" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1274763304/wid/_243342/uiconf_id/48501/entry_id/0_swup5zao">
-	<param name="allowFullScreen" value="true" />
-	<param name="allowNetworking" value="all" />
-	<param name="allowScriptAccess" value="always" />
-	<param name="bgcolor" value="#000000" />
+
+<div id="kaltura_player" style="width:400px;height:330px"></div>
+<script>
+	var flashvars = {
+			'statistics':{
+				'plugin': true,
+				'foo': 'bar'
+			},
+			'playbackContext': '123',
+			'originFeature': '0',
+			'applicationName': 'customAN',
+			'userId': 'customUid'
+		};
 	
-	<param name="flashVars" value="&playbackContext=123&originFeature=0&applicationName=customAN&userId=customUid" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1274763304/wid/_243342/uiconf_id/48501/entry_id/0_swup5zao" />
-</object>
+	function doEmbedPlayer( fv ){
+		// clear the text box: 
+		$('#analyticsLog').empty();
+		kWidget.embed({
+			'targetId' : 'kaltura_player',
+			'wid' : '_243342',
+			'uiconf_id' : '48501',
+			'entry_id' : '0_swup5zao',
+			'flashvars': fv
+		})
+	}
+	/* embed with flashvars: */
+	doEmbedPlayer(flashvars);
+		
+	$( '#analyticsSettings' ).prettyKalturaConfig(
+			'statistics', 
+			flashvars, 
+			function(fv){
+				doEmbedPlayer( fv );
+			}
+	);
+</script>
 </div>
 </div>
 <!-- 
