--- a/modules/GoogleAnalytics/tests/GoogleAnalytics.qunit.html
+++ b/modules/GoogleAnalytics/tests/GoogleAnalytics.qunit.html
@@ -5,6 +5,7 @@
 
 		<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
+		<script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
 
 		<script type="text/javascript">
 			window[ 'trackFunc' ] = function( category, action, opt_label, opt_value ) {
@@ -70,7 +71,7 @@
 
 	<body>
 		<h2> Google Analytics Test </h2>
-		<a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
+		<div id="playbackModeSelector"></div>
 		<br />
 		<div id="player_container" style="float:left;" >
 			<object id="kaltura_player" 
