added userId to analytics output

--- a/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
@@ -65,6 +65,7 @@ window['kalturaSendAnalyticEvent'] = function( analyticName, analyticValue ){
 			"\n\tcontextId: " + analyticValue['contextId'] + 
 			"\n\tfeatureType: " +analyticValue['featureType'] + 
 			"\n\tapplicationId: " + analyticValue['applicationId'] + 
+			"\n\tuserId: " + analyticValue['userId'] + 
 	"\n");
 	setTimeout(function(){
 		if( window['sendKalturaSendAnalyticEvent'] ){
