fixed height to be a function that can be called so that pages that grow in length can still fit in an iframe

--- a/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KalturaAnalytics.qunit.html
@@ -71,7 +71,7 @@ window['kalturaSendAnalyticEvent'] = function( analyticName, analyticValue ){
 		if( window['sendKalturaSendAnalyticEvent'] ){
 			sendKalturaSendAnalyticEvent( analyticName, analyticValue );
 		}
-	},100);
+	}, 100);
 };
 // non-jquery display of events: 
 if( window.QUnit ){
@@ -79,7 +79,7 @@ if( window.QUnit ){
 }
 </script>
 </head>
-<body>
+<body style="height:100%">
 <h2> Kaltura Analytics </h2>
 
 Kaltura analytics enables <a href="http://knowledge.kaltura.com/creating-and-tracking-analytics-kmc-0">tracking kaltura players</a>
