use playbackModeSelector instead of raw forceMobileHTML5 call

--- a/modules/KalturaSupport/tests/EmbedFlashembed.qunit.html
+++ b/modules/KalturaSupport/tests/EmbedFlashembed.qunit.html
@@ -60,7 +60,7 @@
 	</head>
 
 	<body>
-		<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+		<div id="playbackModeSelector"></div>
 		
 		<!-- other parts of the page -->
 
