--- a/modules/KalturaSupport/tests/PageWithVerticalScrollHideShow.html
+++ b/modules/KalturaSupport/tests/PageWithVerticalScrollHideShow.html
@@ -62,7 +62,7 @@ $( document ).ready(function(){
 });
 </script>
 <h2> Test Fullscreen on Page with Vertical Scroll Hide Show</h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <a id="testHide" href="#">Test hide/show player</a> 
 <br />
