--- a/modules/KalturaSupport/tests/PlaylistNewSkin.html
+++ b/modules/KalturaSupport/tests/PlaylistNewSkin.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h2>Playlist New Skin</h2>	
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br /><br />
 <object id="kaltura_player_1343044255" name="kaltura_player_1343044255" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="740" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1343044255/wid/_423851/uiconf_id/8714241">
 	<param name="allowFullScreen" value="true" />
