--- a/modules/KalturaSupport/tests/ResizablePlayer.html
+++ b/modules/KalturaSupport/tests/ResizablePlayer.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <h2>Resizable Player</h2>	
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 		
 	<div id="resizable" class="ui-widget-content">
