--- a/modules/KalturaSupport/tests/moderationPluginTest.html
+++ b/modules/KalturaSupport/tests/moderationPluginTest.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h2> Moderation </h2>	
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop HTML5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1327566632"
 	name="kaltura_player_1327566632"
