--- a/modules/KalturaSupport/tests/showAlert.html
+++ b/modules/KalturaSupport/tests/showAlert.html
@@ -60,7 +60,7 @@
 </head>
 <body style="padding: 10px 20px;">
     <h2> Show Alert </h2>
-    <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop HTML5 browsers
+    <div id="playbackModeSelector"></div>
     <br />
     <object id="kaltura_player_1327414807"
         name="kaltura_player_1327414807"
