--- a/modules/KalturaSupport/tests/AccessControlKS.html
+++ b/modules/KalturaSupport/tests/AccessControlKS.html
@@ -10,7 +10,7 @@
 <body>
 <h2> Access Control with KS </h2>
 <h3>Passing the player KS using flashvar and loading Thumbnails with KS</h3>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1311514900" name="kaltura_player_1311514900"
  type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" 
