--- a/modules/KalturaSupport/tests/AudioEntry.html
+++ b/modules/KalturaSupport/tests/AudioEntry.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h2> Audio Entry </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1318173596" name="kaltura_player_1318173596" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1318173969/wid/_423851/uiconf_id/5902462/entry_id/1_bmjjnbbs">
 	<param name="allowFullScreen" value="true" />
