--- a/modules/KalturaSupport/tests/AudioMP3Entry.qunit.html
+++ b/modules/KalturaSupport/tests/AudioMP3Entry.qunit.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 	<h2> MP3 Flavor Test </h2>
-	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+	<div id="playbackModeSelector"></div>
 	<br />
 	<object id="kaltura_player_1340698854" 
 			name="kaltura_player_1340698854" 
