--- a/modules/KalturaSupport/tests/AudioPlaylist.html
+++ b/modules/KalturaSupport/tests/AudioPlaylist.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h2> Audio Playlist </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 
 
