--- a/modules/KalturaSupport/tests/BumperAdTest.html
+++ b/modules/KalturaSupport/tests/BumperAdTest.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h2> Preroll ad + Preroll Bumper </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" name="kaltura_player" 
 	type="application/x-shockwave-flash" allowFullScreen="true" 
