--- a/modules/KalturaSupport/tests/BumperVideoNoAdd.qunit.html
+++ b/modules/KalturaSupport/tests/BumperVideoNoAdd.qunit.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1>Bumper Only</h1>
-		<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers<br /><br />
+		<div id="playbackModeSelector"></div><br /><br />
 		<div id="test_player_target"></div>
 	<script type="text/javascript">	
 		function jsKalturaPlayerTest( videoId ){
