--- a/modules/KalturaSupport/tests/ChangeMediaEntry.qunit.html
+++ b/modules/KalturaSupport/tests/ChangeMediaEntry.qunit.html
@@ -51,7 +51,7 @@ window['jsCallbackReady'] = function( videoId ){
 <body>
 <h2> Change media player </h2>
 <h3> Load empty entry and use changeMedia API to load different entry </h3>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
 allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
