--- a/modules/KalturaSupport/tests/DownloadMedia.html
+++ b/modules/KalturaSupport/tests/DownloadMedia.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h2> Download Media </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop HTML5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1327841730"
 	name="kaltura_player_1327841730"
