--- a/modules/KalturaSupport/tests/OptionsMenu.html
+++ b/modules/KalturaSupport/tests/OptionsMenu.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Options Menu</h2>	
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1322485191" name="kaltura_player_1322485191" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1322485191/wid/_423851/uiconf_id/6406621/entry_id/1_7yo0pf7m">
 	<param name="allowFullScreen" value="true" />
