--- a/modules/KalturaSupport/tests/WatermarkTest.html
+++ b/modules/KalturaSupport/tests/WatermarkTest.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h2> watermark </h2>	
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" name="kaltura_player" 
 	type="application/x-shockwave-flash" 
