--- a/modules/KalturaSupport/tests/jQuery1.3.2_Integration.html
+++ b/modules/KalturaSupport/tests/jQuery1.3.2_Integration.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h2> jQuery 1.3.2 Integration </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" name="kaltura_player" 
 	type="application/x-shockwave-flash" 
