renamed nielsen combined, replaced more forceHTML5 links with <div id="playbackModeSelector"></div>

--- a/modules/DoubleClick/tests/DoubleClickAdPattern.html
+++ b/modules/DoubleClick/tests/DoubleClickAdPattern.html
@@ -22,7 +22,7 @@ function jsKalturaPlayerTest( videoId ){
 <h2> DoubleClick Playlist AdPattern test </h2>
 
 Set ad pattern CAC ( content ad content -> content ad content )<br>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player_1316977410" name="kaltura_player_1316977410"
