--- a/modules/KalturaSupport/tests/AccessControlPreviewEmbedLevelKS.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPreviewEmbedLevelKS.qunit.html
@@ -50,7 +50,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Access Control Preview embed level ks </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="playerTarget" style="width:400px;height:330px;"> loading ... </div>
 <script>
