--- a/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
+++ b/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
@@ -51,7 +51,7 @@ function jsKalturaPlayerTest( videoId ){
 <body>
 <h2> VAST flashvar DoubleClick Ad and Companion </h2>
 <a href="http://ad-2g.doubleclick.net/pfadx/AngelaSite;kw=ipadad;sz=100x100;ord=45028616;dcmt=text/xml">DoubleClick VAST</a> <br/>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="testLongCompanion" style="width:728px;height:90px;;border:solid thin black;padding:5px;margin:5px;"> ( long companion target )</div>
 <br />
