--- a/modules/KalturaSupport/tests/AgeGate.html
+++ b/modules/KalturaSupport/tests/AgeGate.html
@@ -8,7 +8,7 @@
 <body>
 <h2> Age Gate test </h2>
 Renders an "age gate" form where the user must supply their age before they can access the content. <br />
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br /><br />
 
 <div id="player" style="width: 480px; height: 330px;"></div>
