--- a/modules/KalturaSupport/tests/CuePointsAds.html
+++ b/modules/KalturaSupport/tests/CuePointsAds.html
@@ -18,7 +18,7 @@
 	<li>02:38 - Postroll</li>
 </ul>
 
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br /><br />
 
 <div id="myVideoTarget" style="width:400px;height:330px;"></div>
