--- a/modules/KalturaSupport/tests/CustomMessageAccessControlKS.html
+++ b/modules/KalturaSupport/tests/CustomMessageAccessControlKS.html
@@ -27,7 +27,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Custom Message AC KS test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
