--- a/modules/KalturaSupport/tests/NativeWebKitPlaysInline.html
+++ b/modules/KalturaSupport/tests/NativeWebKitPlaysInline.html
@@ -54,7 +54,7 @@ function jsKalturaPlayerTest( videoId ){
 <h2> Native App WebKitPlaysInline test </h2>
 Note this test is specific to Native App Webkit applications and the use of the html5 library.<br>
 You can test by using desktop safari with an iPhone user agent and check for inline controls.
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="myVideoTarget" style="width:400px;height:330px;">
 	<!--  SEO and video metadata go here -->
