--- a/modules/KalturaSupport/tests/RestrictUserAgent.html
+++ b/modules/KalturaSupport/tests/RestrictUserAgent.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>User Agent Restriction</h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1317831311" name="kaltura_player_1317831311" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1317831311/wid/_423851/uiconf_id/5902462/entry_id/1_0nqgn9pd">
 	<param name="allowFullScreen" value="true" />
