--- a/modules/KalturaSupport/tests/kWidget.embed.emptyPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.emptyPlayer.qunit.html
@@ -42,7 +42,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> kWidget Empty Player test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <div id="myVideoTarget" style="width:400px;height:330px;">
