--- a/modules/KalturaSupport/tests/kWidget.embed.withOnPageObjects.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.withOnPageObjects.qunit.html
@@ -36,7 +36,7 @@ function readyCallbackFired( playerId ){
 </head>
 <body>
 <h2> kWidget with Object tag on page test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <div id="myVideoTarget" style="width:400px;height:330px;">
