--- a/modules/NielsenCombined/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenCombined/tests/IntegrationFreeWheelNielsen.html
@@ -50,7 +50,7 @@ function jsKalturaPlayerTest( videoId ){
 <h2> Integration FreeWheel Nielsen test </h2>
 <a href="#" id="evalTag"> Evaluate {NielsenPlugin.tag_category}</a> -- shows category for current asset. <br>
 Freeshweel Ads:: Preroll, midroll at 10 seconds, postroll.<br> 
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
 allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
