--- a/modules/DoubleClick/tests/DoubleClickEnablePlayPauseUi.qunit.html
+++ b/modules/DoubleClick/tests/DoubleClickEnablePlayPauseUi.qunit.html
@@ -57,7 +57,7 @@ function jsKalturaPlayerTest( videoId ){
 
 doubleClick.playPauseUI is set to true to enable the play pause ui controls 
 <br /><br />
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1316310055" 
 	name="kaltura_player_1316310055" 
