--- a/modules/DoubleClick/tests/DoubleClickManagedPlayerAdApi.qunit.html
+++ b/modules/DoubleClick/tests/DoubleClickManagedPlayerAdApi.qunit.html
@@ -94,7 +94,7 @@ function jsKalturaPlayerTest( videoId ){
 
 all ad slots and overlays are loaded from server. 
 <br /><br />
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="videoTarget" style="width:400px;height:330px"></div>
 <script>
