--- a/modules/DoubleClick/tests/DoubleClickPlayer.html
+++ b/modules/DoubleClick/tests/DoubleClickPlayer.html
@@ -48,7 +48,7 @@ Should display: ( view source for uiconf )
 <li>postroll on clip done</li>
 </ul>
 </br>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1316310055" 
 	name="kaltura_player_1316310055" 
