--- a/modules/DoubleClick/tests/DoubleClickPlaylist.html
+++ b/modules/DoubleClick/tests/DoubleClickPlaylist.html
@@ -19,7 +19,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> DoubleClick Playlist test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player_1316977410" name="kaltura_player_1316977410"
