--- a/modules/DoubleClick/tests/iPhoneCompatibleDoubleClickPreroll.html
+++ b/modules/DoubleClick/tests/iPhoneCompatibleDoubleClickPreroll.html
@@ -36,7 +36,7 @@ $(function(){
 <body>
 <h2> Iphone Compatible preroll DoubleClick ( only preroll ) </h2>
 <br /><br />
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" 
 	name="kaltura_player" 
