--- a/modules/FreeWheel/tests/FreeWheelPlayer.html
+++ b/modules/FreeWheel/tests/FreeWheelPlayer.html
@@ -18,7 +18,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> FreeWheel Player test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1316173769"
 	name="kaltura_player_1316173769" 
