--- a/modules/KalturaSupport/tests/AccessControlPlaylistBlockMobileFirstEntry.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPlaylistBlockMobileFirstEntry.qunit.html
@@ -29,7 +29,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> AccessControl Playlist Block Mobile First Entry Test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="kaltura_player" style="width:400px;height:680px"></div>
 <script>
