--- a/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
@@ -97,7 +97,7 @@ function jsKalturaPlayerTest( videoId ){
 <h2> Access Control Preview, custom purchase </h2>
 The default free preview dialog is repressed with <i>disableAlerts</i>, and an custom action is overlaid, <br>
 to demonstrate end to end preview -> purchase work flow. <br><br>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="playerTarget" style="width:400px;height:330px;"></div>
 <script>
