--- a/modules/KalturaSupport/tests/BindUnbind.qunit.html
+++ b/modules/KalturaSupport/tests/BindUnbind.qunit.html
@@ -189,7 +189,7 @@
 </head>
 <body>
 	<h2> Unified bind/unbind methods test </h2>
-	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+	<div id="playbackModeSelector"></div>
 	<br />
 	<div id="myVideoTarget" style="width: 400px; height: 330px"></div>
 
