--- a/modules/KalturaSupport/tests/BufferEvents.qunit.html
+++ b/modules/KalturaSupport/tests/BufferEvents.qunit.html
@@ -81,7 +81,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Buffer Events test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1330021939" 
 	name="kaltura_player_1330021939" 
