--- a/modules/KalturaSupport/tests/DownloadLinkPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/DownloadLinkPlayer.qunit.html
@@ -59,7 +59,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Download Link test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
