--- a/modules/KalturaSupport/tests/EmbedSWFObject.2.2.qunit.html
+++ b/modules/KalturaSupport/tests/EmbedSWFObject.2.2.qunit.html
@@ -54,7 +54,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> SwfObject 2.2 embed test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="videoPlayerTarget">
 </div><br>
