--- a/modules/KalturaSupport/tests/ExternalResources.qunit.html
+++ b/modules/KalturaSupport/tests/ExternalResources.qunit.html
@@ -53,7 +53,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> External Resources test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <h3>OnPage resources</h3>
 <ul>
