--- a/modules/KalturaSupport/tests/FlavorSelector.preferedFlavorBR.qunit.html
+++ b/modules/KalturaSupport/tests/FlavorSelector.preferedFlavorBR.qunit.html
@@ -57,7 +57,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Flavor Selector test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
