--- a/modules/KalturaSupport/tests/ImageEntry.html
+++ b/modules/KalturaSupport/tests/ImageEntry.html
@@ -31,7 +31,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Image Entry test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1318173596" name="kaltura_player_1318173596" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1318173596/wid/_423851/uiconf_id/5902462/entry_id/1_ui4no6oc">
 	<param name="allowFullScreen" value="true" />
