--- a/modules/KalturaSupport/tests/ImageEntryBumpers.html
+++ b/modules/KalturaSupport/tests/ImageEntryBumpers.html
@@ -28,7 +28,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> ImageEntry Bumpers test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1327618822" 
 	name="kaltura_player_1327618822" 
