--- a/modules/KalturaSupport/tests/ImageEntryPlaylist.html
+++ b/modules/KalturaSupport/tests/ImageEntryPlaylist.html
@@ -21,7 +21,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Image Entry Playlist test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1327276871" 
 	name="kaltura_player_1327276871" 
