--- a/modules/KalturaSupport/tests/LegacyMultipleDynamicEmbeds.qunit.html
+++ b/modules/KalturaSupport/tests/LegacyMultipleDynamicEmbeds.qunit.html
@@ -42,7 +42,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Legay Multiple Embeds test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br /><br />
 <a href="#" id="doEmbed">Do post domReady embed</a>
 <div id="videoContainer"></div>
