--- a/modules/KalturaSupport/tests/LoadTimeTest.html
+++ b/modules/KalturaSupport/tests/LoadTimeTest.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2> Player load time test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <div id="myPlayer" style="width:400px;height:330px;">
