--- a/modules/KalturaSupport/tests/NoHLSforLessThan10Seconds.qunit.html
+++ b/modules/KalturaSupport/tests/NoHLSforLessThan10Seconds.qunit.html
@@ -53,7 +53,7 @@ mw.isIOS = function(){
 </head>
 <body>
 <h2> No HLS for Clips Less Than 10 Seconds test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
