--- a/modules/KalturaSupport/tests/PlayerEventsKdpReady.qunit.html
+++ b/modules/KalturaSupport/tests/PlayerEventsKdpReady.qunit.html
@@ -34,7 +34,7 @@ function onKdpReady( videoId ){
 </head>
 <body>
 <h2> Player Events KdpReady test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
