--- a/modules/KalturaSupport/tests/PlaylistPostRollBumper.html
+++ b/modules/KalturaSupport/tests/PlaylistPostRollBumper.html
@@ -40,7 +40,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Playlist Postroll Bumper test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1328090850" 
 	name="kaltura_player_1328090850" 
