--- a/modules/KalturaSupport/tests/ReadyCallback.html
+++ b/modules/KalturaSupport/tests/ReadyCallback.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2> ReadyCallback Test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div id="myVideoTarget" style="width:400px;height:257px;"></div>
 <script type="text/javascript">
