--- a/modules/KalturaSupport/tests/ReplaceSources.qunit.html
+++ b/modules/KalturaSupport/tests/ReplaceSources.qunit.html
@@ -58,7 +58,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Replace Flavors, Retain entry metadata </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <div id="myVideoTarget" style="width:400px;height:330px;">
