--- a/modules/KalturaSupport/tests/TallBasicPlayerLayout.html
+++ b/modules/KalturaSupport/tests/TallBasicPlayerLayout.html
@@ -50,7 +50,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Tall Player Layout test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
 allowNetworking="all" allowScriptAccess="always" height="500" width="400" xmlns:dc="http://purl.org/dc/terms/" 
