--- a/modules/KalturaSupport/tests/TitlePlayer.qunit.html
+++ b/modules/KalturaSupport/tests/TitlePlayer.qunit.html
@@ -63,7 +63,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Title player test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player" 
 	name="kaltura_player" 
