--- a/modules/KalturaSupport/tests/TitlePlaylist.qunit.html
+++ b/modules/KalturaSupport/tests/TitlePlaylist.qunit.html
@@ -56,7 +56,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Title playlist test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <object id="kaltura_player_1315358135"
  name="kaltura_player_1315358135" 
