--- a/modules/KalturaSupport/tests/iPadHTML_Controls_Native_EnableIpadNativeFullscreen.html
+++ b/modules/KalturaSupport/tests/iPadHTML_Controls_Native_EnableIpadNativeFullscreen.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h2> iPad HTML5 controls native fullscreen controls</h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <b>NOTE the native fullscreen button only works durring playback</b> ( device restriction )
 <pre>
 	If we should use the native device fullscreen call, 
