--- a/modules/KalturaSupport/tests/iPhoneDisableShowHTMLPlayScreen.html
+++ b/modules/KalturaSupport/tests/iPhoneDisableShowHTMLPlayScreen.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h2> iPhone show html5 player test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
