--- a/modules/KalturaSupport/tests/playerSizes.html
+++ b/modules/KalturaSupport/tests/playerSizes.html
@@ -27,7 +27,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2>Player Sizes test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 Small basic controls <br>
