--- a/modules/NielsenCombined/tests/NielsenCombinedPlayer.qunit.html
+++ b/modules/NielsenCombined/tests/NielsenCombinedPlayer.qunit.html
@@ -126,7 +126,7 @@ kWidget.addReadyCallback( function( playerId ){
 </head>
 <body>
 <h2> NielsenCombined player test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 <div style="float:left;width:420px;">
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
