--- a/modules/Omniture/tests/siteCatalyst15.qunit.html
+++ b/modules/Omniture/tests/siteCatalyst15.qunit.html
@@ -26,7 +26,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Omniture siteCatalyst15 test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <div id="kaltura_player" style="float:left;width:400px;height:330px"></div>
