--- a/modules/Omniture/tests/siteCatalyst15Playlist.html
+++ b/modules/Omniture/tests/siteCatalyst15Playlist.html
@@ -26,7 +26,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Omniture siteCatalyst15 playlist test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 
 <div id="kaltura_player" style="width:740px;height:330px"></div>
