--- a/modules/KalturaSupport/tests/ExternalResources.qunit.html
+++ b/modules/KalturaSupport/tests/ExternalResources.qunit.html
@@ -18,7 +18,6 @@ mw.setConfig('Kaltura.EnableEmbedUiConfJs', true);
 mw.setConfig('LoadingSpinner.ImageUrl', 'externalResources/loading.gif');
 
 function jsKalturaPlayerTest( videoId ){
-	
 	// Name this module
 	module( "External Resources" );
 	var kdp = $('#' + videoId )[0];
@@ -28,7 +27,6 @@ function jsKalturaPlayerTest( videoId ){
 		kalturaQunitWaitForPlayer(function(){
 			equal( $('.fooBar' ).css('background-color'), 'rgb(255, 0, 0)', "On page CSS active" );
 			equal( $('#testPluginTarget').text(),  'update via on page js', "On page JS active" );
-
 			start();
 			setTimeout(function(){
 				testIframeResources();
@@ -43,7 +41,6 @@ function jsKalturaPlayerTest( videoId ){
 			equal( kdp.evaluate( '{myCustomPlugin.foo}' ), 'bar', "setKDP attribute export working" );
 			start();
 		};
-		
 	});
 }
 
@@ -53,6 +50,8 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> External Resources test </h2>
+<div id="externalResourcesDoc"></div>
+
 <div id="playbackModeSelector"></div>
 <br />
 <h3>OnPage resources</h3>
@@ -68,21 +67,43 @@ function jsKalturaPlayerTest( videoId ){
     <li><a href="externalResources/IframeCustomPluginCss1.css">IframeCustomPluginCss1</a> -- custom css file ( changes play button to a flower )</li>
 	<li>Custom Loading Spinner - mw.setConfig('LoadingSpinner.ImageUrl', 'externalResources/loading.gif');</li>
 </ul>
+<div id="kaltura_player" style="width:400px;height:330px;"></div>
+<script>
+var flashvars = {
+	'myExternalResourcesPlugin':{
+		'plugin' : true,
+		'onPageJs1':"externalResources/onPageJs1_fooBarPlugin.js",
+		'onPageCss1':"externalResources/onPageCss1_fooBarPlugin.css",
+		'iframeHTML5Js1':"externalResources/iframeHTML5_fooBarPlugin.js",
+		'iframeHTML5Css': "externalResources/iframeHTML5_fooBarPlugin.css"
+	},
+	"IframeCustomPluginJs1" :"externalResources/IframeCustomPluginJs1.js",
+	"IframeCustomPluginCss1" : "externalResources/IframeCustomPluginCss1.css",
+	"onPageJs1" : "externalResources/onPageJs1.js",
+	"onPageCss1" :"externalResources/onPageCss1.css"
+};
 
-<object id="kaltura_player" name="kaltura_player" 
-type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" 
-allowScriptAccess="always" height="330" width="400" bgcolor="#000000" 
-xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/"
- rel="media:video" 
- resource="http://www.kaltura.com/index.php/kwidget/cache_st/1318418799/wid/_243342/uiconf_id/5994862/entry_id/0_uka1msg4" 
- data="http://www.kaltura.com/index.php/kwidget/cache_st/1318418799/wid/_243342/uiconf_id/5994862/entry_id/0_uka1msg4">
- <param name="allowFullScreen" value="true" />
- <param name="allowNetworking" value="all" />
- <param name="allowScriptAccess" value="always" />
- <param name="bgcolor" value="#000000" />
- <param name="flashVars" value="&" />
- <param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1318418799/wid/_243342/uiconf_id/5994862/entry_id/0_uka1msg4" />
-</object>
+function doEmbedPlayer( fv ){
+	// clear the text box: 
+	kWidget.embed({
+		'targetId' : 'kaltura_player',
+		'wid' : '_243342',
+		'uiconf_id' : '5994862',
+		'entry_id' : '0_uka1msg4',
+		'flashvars': fv
+	})
+}
+/* embed with flashvars: */
+doEmbedPlayer(flashvars);
+$( '#externalResourcesDoc' ).prettyKalturaConfig(
+		'myExternalResourcesPlugin', 
+		flashvars, 
+		function(fv){
+			doEmbedPlayer( fv );
+		}
+);
+</script>
+
 
 </body>
 <!--  UiConf file used in this example: 
@@ -90,7 +111,7 @@ xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/search
   <HBox id="topLevel" width="100%" height="100%">
     <VBox id="player" width="100%" height="100%" styleName="black">
     
-      <Plugin id="fooBar" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand" 
+      <Plugin id="myExternalResourcesPlugin" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand" 
       	onPageJs1="externalResources/onPageJs1_fooBarPlugin.js"
       	onPageCss1="externalResources/onPageCss1_fooBarPlugin.css"
       	iframeHTML5Js1="externalResources/iframeHTML5_fooBarPlugin.js"
