--- a/modules/NielsenCombined/tests/NielsenCombinedPlayer.qunit.html
+++ b/modules/NielsenCombined/tests/NielsenCombinedPlayer.qunit.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <title>NielsenCombined player test</title>
-<script src="http://code.jquery.com/jquery-1.6.js"></script>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
@@ -111,38 +110,76 @@ function jsKalturaPlayerTest( videoId ){
 }
 </script>
 <script type="text/javascript">	
+var kdpPlayer = null;
 kWidget.addReadyCallback( function( playerId ){
-	var player =  $('#' + playerId )[0];
+	kdpPlayer = $('#' + playerId )[0];
 	// only html5 ( should change to a jsListener if we get the flash verison on this page as well)
-	if( player.bindHelper ){
-		player.bindHelper( 'NielsenCombined_DispatchEvent', function( event, args ){
-			$('#log').append( '<br><br>' + args.join(',<br>') );
-		});
-	}
+	$( kdpPlayer ).bind( 'NielsenCombined_DispatchEvent', function( event, args ){
+		$('#analyticsLog').append( "NielsenCombined:: " + JSON.stringify( args ) + "\n");
+	});
 });
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
 <script type="text/javascript" src="../../KalturaSupport/tests/resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> NielsenCombined player test </h2>
+<h2> Nielsen Combined</h2>
+<div id="nielsenAnalyticsSettings"></div>
 <div id="playbackModeSelector"></div>
 <br />
-<div style="float:left;width:420px;">
-<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
-allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
-xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video"
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/12924364499/wid/_243342/uiconf_id/6037081/entry_id/0_swup5zao" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364499/wid/_243342/uiconf_id/6037081/entry_id/0_swup5zao">
-	<param name="allowFullScreen" value="true" />
-	<param name="allowNetworking" value="all" />
-	<param name="allowScriptAccess" value="always" />
-	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/12924364499/wid/_243342/uiconf_id/6037081/entry_id/0_swup5zao" />
-</object>
-</div>
-<div id="log" style="float:left;width:400px;overflow:auto;font-family: arial;font-size: 14px;background-color: #eee;"><h3>Nielsen Combined Api Calls</h3></div>
+
+<div id="analyticsContainer" style="float:left;padding-right:20px;" >
+	<i>Analytics events:</i> ( only html5 )<br />
+	<textarea id="analyticsLog" rows='15' ></textarea>
+	</div>
+	<div id="kaltura_player" style="float:left;width:400px;height:330px"></div>
+
+	<script>
+	window['trackEvent'] = function( eventObj ){
+		if( kdpPlayer ){
+			$( kdpPlayer ).trigger( 'NielsenCombined_DispatchEvent',  eventObj);
+		}
+	}
+	
+	var flashvars = {
+			'nielsenCombined':{
+				'plugin': true,
+				'trackEventMonitor' : 'trackEvent',
+				'clientId':"us-502202", 
+				'vcid':"c15",
+				'tag_title':"{mediaProxy.entry.name}",
+				'tag_category' : "{mediaProxy.entry.categories}",
+				'tag_subcategory' : "{mediaProxy.entryMetadata.subcategories}",
+				'tag_censuscategory' : "{mediaProxy.entry.censuscategories}",
+				'tag_imgurl' : "{mediaProxy.entry.thumbnailUrl}"
+			}
+		};
+	
+	function doEmbedPlayer( fv ){
+		// clear the text box: 
+		$('#analyticsLog').empty();
+		kWidget.embed({
+			'targetId' : 'kaltura_player',
+			'wid' : '_243342',
+			'uiconf_id' : '6037081',
+			'entry_id' : '0_swup5zao',
+			'flashvars': fv
+		})
+	}
+	/* embed with flashvars: */
+	doEmbedPlayer(flashvars);
+		
+	$( '#nielsenAnalyticsSettings' ).prettyKalturaConfig(
+			'nielsenCombined', 
+			flashvars, 
+			function(fv){
+				doEmbedPlayer( fv );
+			}
+	);
+	analyticsLog
+	
+	</script>
+
 <!--  uiConf used in above test: 
 
 <layout id="full" name="NielsenCombined Test Player" skinPath="/content/uiconf/kaltura/kmc/appstudio/kdp3/eagle/skin/v3.5.9/skin.swf">
