renamed and fixed a few test files

--- a/modules/KalturaSupport/tests/CaptionsUnderPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsUnderPlayer.qunit.html
@@ -51,7 +51,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Captions Under Player for kdp flash player and html5 player </h2>
-<a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br /><br />
 <div style="float:left">
 	<object id="kaltura_player_1342448294" name="kaltura_player_1342448294" type="application/x-shockwave-flash" 
