--- a/modules/KalturaSupport/tests/PlaylistKalturaMRSS.html
+++ b/modules/KalturaSupport/tests/PlaylistKalturaMRSS.html
@@ -5,10 +5,12 @@
     </head>
    <body>
    	<h3>Playlist with Kaltura MRSS</h3>
-   	 <a href="?forceMobileHTML5"> Force Mobile HTML5</a>  <br> <br>
+<div id="playbackModeSelector"></div>
+   	 <br> <br>
    		<div class='video_wrap'>
               <div id='kplayer'></div>
        </div>
+      <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
       <script src="/html5.kaltura/mwEmbed/mwEmbedLoader.php" type="text/javascript"></script>
       <script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
