--- a/modules/KalturaSupport/tests/PlaylistNoClipList.html
+++ b/modules/KalturaSupport/tests/PlaylistNoClipList.html
@@ -3,6 +3,7 @@
 <head>
 <title>Fall forward html5</title>
 
+<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>    
 <script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
 <!--
@@ -11,12 +12,6 @@
 <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
 -->
   
-<script type="text/javascript">
-	if( document.URL.indexOf('forceMobileHTML5') != -1 ){		
-		mw.setConfig( 'forceMobileHTML5' , true );
-	}
-
-</script>
 </head>
 <body>
 <h2> Playlist no interface ( fish then coffee )</h2>
