--- a/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
+++ b/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
@@ -3,29 +3,70 @@
 </head>
 <body>
 	<h3>Sample kWidget.getSources</h3>
+	This script enables you to generate stand alone video tags using kaltura entries. <br>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	partnerId : <input id="partnerId" type="text" value="243342" size="5"> entryId: <input id="entryId" type="text" value="0_c0r624gh" size="8"><br/>
-	<input id="getSources" type="button" value="get sources"/>
+	<script type="text/javascript" src="../../../docs/js/doc-bootstrap.js"></script>
+	partnerId : <input id="partnerId" type="text" value="243342" size="5" style="width:100px"> entryId: <input id="entryId" type="text" value="0_c0r624gh" size="8" style="width:100px"><br/>
+	<input class="btn" id="getSources" type="button" value="get sources"/>
+	<div id="standAloneVideoTag">
+	</div>
 	<div id="sourceSet"></div>
+	<div id="videoTagHTML"></div>
 	
 	<!--  Stand alone script for getting sources -->
 	<script src="kWidget.getSources.js"></script>
 	
 	<script>
+		function getVideoTag( data ){
+			$vid = $('<video />').attr({
+				'title' : data.name,
+				'data-entryid' : data.entryId,
+				'data-description' : data.description,
+				'poster' : data.poster + '/width/640',
+				'controls': true
+			}).css({
+				'width':'640px'
+			})
+			for( var i=0; i < data.sources.length; i++ ){
+				$vid.append(
+					$('<source />').attr( data.sources[i] )
+				)	
+			}
+			return $vid;
+		}
 		function loadSources(){
-			$('#sourceSet').html('loading <blink>...</blink>');
+			$('#sourceSet,#standAloneVideoTag,#videoTagHTML').html('loading <blink>...</blink>');
+			if( parent && parent.sycnIframeContentHeight ){
+				parent.sycnIframeContentHeight();
+			}
 			kWidget.getSources({
 				'partnerId': $('#partnerId').val(),
 				'entryId': $('#entryId').val(),
-				'callback': function( sourceSet ){
+				'callback': function( data ){
 					var o = '';
-					for( var i in sourceSet ){
-						var source = sourceSet[i];
+					for( var i in data['sources']){
+						var source = data['sources'][i];
 						o += ' <br/>' + ' Source <a href="' + source['src'] + '" >' + source['data-flavorid'] + '</a>, ';
 						o += ( source['data-bitrate'] )? ' bitrate:' + source['data-bitrate'] + ' size: ' + source['data-width'] + 'x' + source['data-height'] : ' ( adaptive ) ';
 						o += '<br />';
 					}
-					$('#sourceSet').html( o );
+					$('#sourceSet').html( '<h3>Source list:</h3>' + o );
+					$('#standAloneVideoTag').empty().append(
+						getVideoTag( data )
+					)
+					$('#videoTagHTML').empty().append(
+						$('<h3 />').text('Video tag html with all sources:'),
+						$('<pre class="prettyprint linenums" />').text(
+							getVideoTag( data ).wrap('<div />').parent().html()
+								.replace(/\>\</g, "\>\n\n\<" )
+								.replace(/"\s/g, "\"\n\t" )
+						)
+					)
+					// make code pretty
+					window.prettyPrint && prettyPrint()	
+					if( parent && parent.sycnIframeContentHeight ){
+						parent.sycnIframeContentHeight();
+					}
 				}
 			})
 		}
