fixed loader id for stand alone video sources

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -12,12 +12,94 @@
 </head>
 <body>
 
-<video id="vid1" width="480" height="267"
-	 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
-	 durationHint="33"
-	 controls >
-		<source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v"></source>
-		<source type="video/ogg" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_400p.ogv"></source>
+<video title="Sintel.2010.720p"
+	data-entryid="0_c0r624gh"
+	poster="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_c0r624gh/version/100004/width/640"
+	controls="controls"
+	data-durationhint="888"
+	width="480"
+	height="192"
+	
+	>
+ 
+<source data-bitrate="42480"
+	data-width="1280"
+	data-height="544"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/0_2mn33cly/format/url/protocol/http/a.webm"
+	data-flavorid="webm"
+	type="video/webm">
+ 
+<source data-bitrate="3200"
+	data-width="480"
+	data-height="192"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/0_b5cmhwnw/format/url/protocol/http/a.3gp"
+	data-flavorid="3gp"
+	type="video/3gp">
+ 
+<source data-bitrate="6376"
+	data-width="816"
+	data-height="352"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/0_1c89hhxb/format/url/protocol/http/a.webm"
+	data-flavorid="webm"
+	type="video/webm">
+ 
+<source data-bitrate="9688"
+	data-width="1120"
+	data-height="480"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/0_g4hvuve3/format/url/protocol/http/a.ogg"
+	data-flavorid="ogg"
+	type="video/ogg">
+ 
+<source data-bitrate="9688"
+	data-width="640"
+	data-height="272"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/0_w3aolq8p/format/url/protocol/http/a.mp4"
+	data-flavorid="iPhone"
+	type="video/h264">
+ 
+<source data-bitrate="15352"
+	data-width="1280"
+	data-height="544"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/0_w48dtkyq/format/url/protocol/http/a.mp4"
+	data-flavorid="iPad"
+	type="video/h264">
+ 
+<source data-bitrate="11440"
+	data-width="1024"
+	data-height="432"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/1_tj3uq03m/format/url/protocol/http/a.mp4"
+	data-flavorid="iPad"
+	type="video/h264">
+ 
+<source data-bitrate="6376"
+	data-width="480"
+	data-height="192"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/1_wvny3hay/format/url/protocol/http/a.3gp"
+	data-flavorid="3gp"
+	type="video/3gp">
+ 
+<source data-bitrate="3344"
+	data-width="480"
+	data-height="192"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/1_upx4jp4h/format/url/protocol/http/a.mp4"
+	data-flavorid="iPhone"
+	type="video/h264">
+ 
+<source data-bitrate="6400"
+	data-width="480"
+	data-height="192"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorId/1_ssz1g2sa/format/url/protocol/http/a.mp4"
+	data-flavorid="iPhone"
+	type="video/h264">
+ 
+<source data-flavorid="iPadNew"
+	type="application/vnd.apple.mpegurl"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorIds/0_w48dtkyq,1_tj3uq03m/format/applehttp/protocol/http/a.m3u8">
+ 
+<source data-flavorid="iPhoneNew"
+	type="application/vnd.apple.mpegurl"
+	src="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/playManifest/entryId/0_c0r624gh/flavorIds/0_w3aolq8p,1_upx4jp4h,1_ssz1g2sa/format/applehttp/protocol/http/a.m3u8">
+ 
 </video>
 
 </body>
