--- a/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
+++ b/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
@@ -22,6 +22,7 @@
 				'title' : data.name,
 				'data-entryid' : data.entryId,
 				'data-description' : data.description,
+				'data-durationhint' : data.duration,
 				'poster' : data.poster + '/width/640',
 				'controls': true
 			}).css({
