some fixes for stand alone usage of the library

--- a/modules/KalturaSupport/tests/BasicPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.qunit.html
@@ -49,7 +49,8 @@ function jsKalturaPlayerTest( videoId ){
 <h2>Object Rewrite</h2>
 <br />
 
-Basic player rewrites work by including the javacript library followed by the flash object tag embed:
+Basic player rewrites work by including the javacript library followed by the flash object tag embed:<br>
+Note this rewrite method is <b>deprecated</b>. You should instead use <a href="kWidget.embed.qunit.html">kWidget embed.</a>
 <br><br>
 <pre class="prettyprint linenums">
 &lt;script src=&quot;{{HTML5LibraryURL}}&quot;&gt;&lt;/script&gt;
