fix paths for custom skin

--- a/modules/KalturaSupport/tests/CustomSkinAudioPlayer.html
+++ b/modules/KalturaSupport/tests/CustomSkinAudioPlayer.html
@@ -13,7 +13,7 @@
 	<div style="float:left">
 	This custom skin uses external JS and CSS via setting the following uiVars:<br>
 <pre class="prettyprint linenums">
-        &lt;var key=&quot;IframeCustomPluginJs&quot; value=&quot;http://www.kaltura.com/content/uiconf/ps/hbp/html5/v1.6.10/hbpAudio.js&quot; overrideFlashvar=&quot;true&quot;/&gt;<br/>    &lt;var key=&quot;IframeCustomjQueryUISkinCss&quot; value=&quot;http://www.kaltura.com/content/uiconf/ps/hbp/html5/v1.6.10/audioPlayer.css&quot; overrideFlashvar=&quot;true&quot;/&gt;
+&lt;var key=&quot;IframeCustomPluginJs&quot; value=&quot;PS/HBP/hbpAudio.js&quot; overrideFlashvar=&quot;true&quot;/&gt;<br/>&lt;var key=&quot;IframeCustomjQueryUISkinCss&quot; value=&quot;PS/HBP/audioPlayer.css&quot; overrideFlashvar=&quot;true&quot;/&gt;
 </pre>
 <br><br>
 		<!-- Audio Player -->
@@ -29,8 +29,8 @@
 			xmlns:dc="http://purl.org/dc/terms/"
 			xmlns:media="http://search.yahoo.com/searchmonkey/media/"
 			rel="media:video"
-			resource="http://www.kaltura.com/index.php/kwidget/cache_st/1333029413/wid/_861182/uiconf_id/7668811/entry_id/1_wjdhr96i"
-			data="http://www.kaltura.com/index.php/kwidget/cache_st/1333029413/wid/_861182/uiconf_id/7668811/entry_id/1_wjdhr96i">
+			resource="http://www.kaltura.com/index.php/kwidget/cache_st/13330294131/wid/_861182/uiconf_id/7668811/entry_id/1_wjdhr96i"
+			data="http://www.kaltura.com/index.php/kwidget/cache_st/13330294131/wid/_861182/uiconf_id/7668811/entry_id/1_wjdhr96i">
 			<param name="allowFullScreen" value="true" />
 			<param name="allowNetworking" value="all" />
 			<param name="allowScriptAccess" value="always" />
