Add "adsOnReplay" test file
followup to e1bd8f62b8d6617d3e4a271b8b8675d64e34faaf  "adsOnReplay"
flashvar to manifest, added to test file and remove spinner after
second ad playback.

--- a/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
+++ b/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
@@ -73,7 +73,8 @@ function jsKalturaPlayerTest( videoId ){
 			'prerollUrl' : 'http://ad-2g.doubleclick.net/pfadx/AngelaSite;kw=ipadad;sz=100x100;ord=45028616;dcmt=text/xml',
 			'timeout' : 4,
 			'preSequence' : 1
-		}
+		},
+		'adsOnReplay':true
 	};
 	
 	function doEmbedPlayer( fv ){
